# FMIKit-Simulink

./: azure-pipelines.yml  sfun_fmurun.cpp
+FMIKit/: setSFunctionParameters.m
+FMIKit/private/: applyDialog.m  getUserData.m  userDataFromStruct.m  userDataToStruct.m
Java/src/main/java/fmikit/ui/: FMUBlockDialog.java
grtfmi/: fmi2Functions.c  grtfmi_block_path.m  grtfmi_bus_variables.m  grtfmi_make_rtw_hook.m  grtfmilib.tlc  grtfmixml.tlc
rtwsfcnfmi/: CMakeLists.txt  rtwsfcnfmi_make_rtw_hook.m
rtwsfcnfmi/c/: fmi.h  fmi2Functions.c  sfunction.c  sfunction.h
rtwsfcnfmi/m/: rtwsfcnfmi_model_sources.m
rtwsfcnfmi/tlc/: rtwsfcnfmi.tlc  rtwsfcnfmi_make_rtw_hook.m  rtwsfcnfmilib.tlc  rtwsfcnfmixml.tlc  sfcnmdi2.tlc  sfcnmei.tlc
tests/: test_me.m
